Update style - fix overlay on iPhone
Add cursor: pointer to settings of overlay block

--- a/style/style.css
+++ b/style/style.css
@@ -68,6 +68,7 @@ button {
   width: 100%;
   height: 100%;
   z-index: 3;
+  cursor: pointer;
 }
 
 .body-overlay--open {
